Update title and add tagline in index.html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>PNX-JP Wiki</title>
+  <title>PNX財団</title>
   <link rel="stylesheet" href="assets/style.css">
+  <tagline> 確保、収容、保護 </tagline>
 </head>
 <body>
 
